feat(cli, project): complete multi-root physical routing and remove legacy change set semantics [skip ci]